# eleks_camp_project

./: .gitignore  CMakeLists.txt  README.MD
data/: cookbook.db
frontend/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
frontend/connections/: CMakeLists.txt  connection_manager.cpp  connection_manager.h  connector.cpp  connector.h  connectors.cpp  connectors.h  i_connector.h  local_connector.cpp  remote_connector.cpp
frontend/connections/include/: connection_manager.h  connectors.h  front_requests.h  front_responses.h  i_connector.h
frontend/connections/src/: connection_manager.cpp  front_requests.cpp  front_responses.cpp  local_connector.cpp  remote_connector.cpp
frontend/misc/: CMakeLists.txt
frontend/misc/include/: favorites_manager.h
frontend/misc/src/: favorites_manager.cpp
frontend/tabs/: CMakeLists.txt
frontend/tabs/include/: abstract_tab.h  recipe_edit_tab.h  recipe_view_tab.h  search_tab.h  tab_manager.h
frontend/tabs/src/: abstract_tab.cpp  recipe_edit_tab.cpp  recipe_view_tab.cpp  search_tab.cpp  tab_manager.cpp
frontend/types/: CMakeLists.txt  favorites_manager.cpp  favorites_manager.h  recipe.cpp  recipe.h  requests.cpp  requests.h  responses.cpp  responses.h
frontend/types/include/: request_structs.h  response_structs.h
frontend/types/src/: recipe.cpp
frontend/widgets/: CMakeLists.txt  criteria_widget.cpp  criteria_widget.h  ingredients_edit_widget.cpp  ingredients_edit_widget.h  ingredients_filter_widget.cpp  ingredients_filter_widget.h  mainwindow.cpp  mainwindow.ui  recipe_edit_tab.cpp  recipe_edit_tab.h  recipe_item_model.cpp  recipe_item_model.h  recipe_row_view.cpp  recipe_row_view.h  recipe_view_tab.cpp  recipe_view_tab.h  recipes_list_view.cpp  recipes_list_view.h  row_holder.cpp  row_holder.h  search_filters.cpp  search_filters.h  search_tab.cpp  search_tab.h  search_widget.cpp  search_widget.h  tab_manager.cpp  tab_manager.h
frontend/widgets/include/: ingredients_filter_widget.h  recipe_row_view.h  recipes_list_view.h  search_filters.h
frontend/widgets/src/: ingredients_edit_widget.cpp  ingredients_filter_widget.cpp  recipe_row_view.cpp  recipes_list_view.cpp  row_holder.cpp  search_filters.cpp  search_widget.cpp
server/: CMakeLists.txt
server/data_base_api/include/: data_base_api.h  i_data_base_api.h
server/data_base_api/src/: data_base_api.cpp
server/data_queue/: data_queue.h
server/database_api/: CMakeLists.txt
server/database_api/include/: database_api.h  i_database_api.h
server/database_api/lib/SQLiteCpp/: CMakeLists.txt  README.md
server/database_api/src/: database_api.cpp
server/deserializer/: CMakeLists.txt
server/deserializer/include/: i_deserializer.h  json_deserializer.h  request_tag.h
server/deserializer/src/: json_deserializer.cpp
server/handler/: CMakeLists.txt
server/handler/include/: handler.h  i_handler.h
server/handler/src/: handler.cpp
server/initializer/: CMakeLists.txt
server/initializer/include/: data_containers.h  i_initializer.h  initializer.h
server/initializer/src/: data_containers.cpp  initializer.cpp
server/local_exchange/: CMakeLists.txt
server/local_exchange/include/: i_frontend_exchange.h  i_server_exchange.h  local_exchange.h
server/local_exchange/src/: local_exchange.cpp
server/main/: CMakeLists.txt  main.cpp
server/modifier/: CMakeLists.txt
server/modifier/include/: i_modifier.h  modifier.h
server/modifier/src/: modifier.cpp
server/nlohmann_extend/: CMakeLists.txt
server/nlohmann_extend/include/: nlohmann_extend.h
server/nlohmann_extend/lib/nlohmann/: CMakeLists.txt
server/nlohmann_extend/src/: nlohmann_extend.cpp
server/receiver/: CMakeLists.txt
server/receiver/include/: i_receiver.h  local_receiver.h  remote_receiver.h
server/receiver/src/: local_receiver.cpp  remote_receiver.cpp
server/recipe/: CMakeLists.txt
server/recipe/include/: recipe.h
server/recipe/src/: recipe.cpp
server/requests/: CMakeLists.txt
server/requests/include/: requests.h
server/responses/: CMakeLists.txt
server/responses/include/: responses.h
server/searcher/: CMakeLists.txt
server/searcher/include/: criteria.h  i_searcher.h  results.h  searcher.h
server/searcher/src/: searcher.cpp
server/sender/: CMakeLists.txt
server/sender/include/: i_sender.h  local_sender.h  remote_sender.h
server/sender/src/: local_sender.cpp  remote_sender.cpp
server/serializer/: CMakeLists.txt
server/serializer/include/: i_serializer.h  json_serializer.h  response_tag.h
server/serializer/src/: json_serializer.cpp
server/server/: CMakeLists.txt
server/server/include/: i_server.h  local_server_keeper.h  server.h
server/server/src/: server.cpp
server/server_keeper/: CMakeLists.txt
server/server_keeper/include/: local_server_keeper.h  remote_server_keeper.h
server/server_keeper/src/: local_server_keeper.cpp  remote_server_keeper.cpp
server/server_output/: CMakeLists.txt
server/server_output/include/: server_output.h
server/server_output/src/: server_output.cpp
server/templates/: CMakeLists.txt
server/templates/include/: data_queue.h  hash_container.h  indexed_container.h
server/thread_cycler/: CMakeLists.txt
server/thread_cycler/include/: thread_cycler.h
server/thread_cycler/src/: thread_cycler.cpp
server/transfer/: CMakeLists.txt
server/transfer/include/: i_transfer.h  pack.h  tcp_transfer.h
server/transfer/lib/asio/: CMakeLists.txt
server/transfer/src/: tcp_transfer.cpp
src/project-front-desktop/: CMakeLists.txt  base_types.cpp  base_types.h  common_base_types.h  mainwindow.cpp  mainwindow.ui  recipe_item_model.cpp  recipe_item_model.h  recipe_row_view.cpp  recipe_row_view.h  recipes_list_view.cpp  recipes_list_view.h  search_widget.cpp  search_widget.h  searcher.cpp  searcher.h
src/project-front-desktop/connections/: connection_manager.cpp  connection_manager.h  connector.h  connectors.h
src/project-front-desktop/types/: base_types.cpp  base_types.h
src/project-front-desktop/widgets/: mainwindow.cpp  mainwindow.ui  recipe_row_view.cpp  recipe_row_view.h  recipes_list_view.h
(+4 files in other folders)
