project(eleks_chef_server)

add_subdirectory(server_output)
add_subdirectory(recipe)
add_subdirectory(database_api)
add_subdirectory(initializer)
add_subdirectory(searcher)
add_subdirectory(modifier)
add_subdirectory(requests)
add_subdirectory(responses)
add_subdirectory(handler)
add_subdirectory(templates)
add_subdirectory(local_exchange)
add_subdirectory(transfer)
add_subdirectory(nlohmann_extend)
add_subdirectory(deserializer)
add_subdirectory(serializer)
add_subdirectory(receiver)
add_subdirectory(sender)
add_subdirectory(thread_cycler)
add_subdirectory(server)
add_subdirectory(server_keeper)
add_subdirectory(main)